@@ -1868,28 +1868,41 @@ operator|.
 name|getDependencyId
 argument_list|()
 decl_stmt|;
-if|if
-condition|(
+name|ModuleDescriptor
+name|md
+init|=
+operator|(
+name|ModuleDescriptor
+operator|)
 name|moduleIdMap
 operator|.
 name|get
 argument_list|(
 name|id
 argument_list|)
+decl_stmt|;
+comment|// we test if this module id has a module descriptor, and if it isn't already in the
+comment|// toKeep Set, in which there's probably a circular dependency
+if|if
+condition|(
+name|md
 operator|!=
 literal|null
+operator|&&
+operator|!
+name|toKeep
+operator|.
+name|contains
+argument_list|(
+name|md
+argument_list|)
 condition|)
 block|{
 name|toKeep
 operator|.
 name|add
 argument_list|(
-name|moduleIdMap
-operator|.
-name|get
-argument_list|(
-name|id
-argument_list|)
+name|md
 argument_list|)
 expr_stmt|;
 if|if
@@ -1901,15 +1914,7 @@ condition|)
 block|{
 name|processFilterNodeFromRoot
 argument_list|(
-operator|(
-name|ModuleDescriptor
-operator|)
-name|moduleIdMap
-operator|.
-name|get
-argument_list|(
-name|id
-argument_list|)
+name|md
 argument_list|,
 name|toKeep
 argument_list|,
