@@ -88,7 +88,7 @@ name|IvyBuildListTest
 extends|extends
 name|TestCase
 block|{
-comment|/*       * Those tests use the ivy files A , B , C , D , E in test/buildlist      * The dependencies are :      * A -> C      * B has no dependency      * C -> B      * D -> A , B      * E has no dependency      */
+comment|/*       * Those tests use the ivy files A , B , C , D , E in test/buildlist      * The dependencies are :      * A -> C      * B has no dependency      * C -> B      * D -> A , B      * E has no dependency      * F -> G      * G -> F      */
 comment|//CheckStyle:MagicNumber| OFF
 comment|//The test very often use MagicNumber.  Using a constant is less expessif.
 specifier|public
@@ -140,6 +140,13 @@ operator|.
 name|setIncludes
 argument_list|(
 literal|"**/build.xml"
+argument_list|)
+expr_stmt|;
+name|fs
+operator|.
+name|setExcludes
+argument_list|(
+literal|"F/build.xml,G/build.xml"
 argument_list|)
 expr_stmt|;
 name|buildlist
@@ -391,6 +398,13 @@ operator|.
 name|setIncludes
 argument_list|(
 literal|"**/build.xml"
+argument_list|)
+expr_stmt|;
+name|fs
+operator|.
+name|setExcludes
+argument_list|(
+literal|"F/build.xml,G/build.xml"
 argument_list|)
 expr_stmt|;
 name|buildlist
@@ -765,6 +779,138 @@ name|getAbsolutePath
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
+specifier|public
+name|void
+name|testWithRootCircular
+parameter_list|()
+block|{
+name|Project
+name|p
+init|=
+operator|new
+name|Project
+argument_list|()
+decl_stmt|;
+name|IvyBuildList
+name|buildlist
+init|=
+operator|new
+name|IvyBuildList
+argument_list|()
+decl_stmt|;
+name|buildlist
+operator|.
+name|setProject
+argument_list|(
+name|p
+argument_list|)
+expr_stmt|;
+name|buildlist
+operator|.
+name|setRoot
+argument_list|(
+literal|"F"
+argument_list|)
+expr_stmt|;
+name|FileSet
+name|fs
+init|=
+operator|new
+name|FileSet
+argument_list|()
+decl_stmt|;
+name|fs
+operator|.
+name|setDir
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/buildlist"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|fs
+operator|.
+name|setIncludes
+argument_list|(
+literal|"**/build.xml"
+argument_list|)
+expr_stmt|;
+name|buildlist
+operator|.
+name|addFileset
+argument_list|(
+name|fs
+argument_list|)
+expr_stmt|;
+name|buildlist
+operator|.
+name|setReference
+argument_list|(
+literal|"ordered.build.files"
+argument_list|)
+expr_stmt|;
+name|buildlist
+operator|.
+name|execute
+argument_list|()
+expr_stmt|;
+name|Object
+name|o
+init|=
+name|p
+operator|.
+name|getReference
+argument_list|(
+literal|"ordered.build.files"
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|o
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|o
+operator|instanceof
+name|Path
+argument_list|)
+expr_stmt|;
+name|Path
+name|path
+init|=
+operator|(
+name|Path
+operator|)
+name|o
+decl_stmt|;
+name|String
+index|[]
+name|files
+init|=
+name|path
+operator|.
+name|list
+argument_list|()
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|files
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|files
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+comment|// F and G should be in the list
 block|}
 specifier|public
 name|void
@@ -1526,6 +1672,137 @@ expr_stmt|;
 block|}
 specifier|public
 name|void
+name|testWithLeafCircular
+parameter_list|()
+block|{
+name|Project
+name|p
+init|=
+operator|new
+name|Project
+argument_list|()
+decl_stmt|;
+name|IvyBuildList
+name|buildlist
+init|=
+operator|new
+name|IvyBuildList
+argument_list|()
+decl_stmt|;
+name|buildlist
+operator|.
+name|setProject
+argument_list|(
+name|p
+argument_list|)
+expr_stmt|;
+name|buildlist
+operator|.
+name|setLeaf
+argument_list|(
+literal|"F"
+argument_list|)
+expr_stmt|;
+name|FileSet
+name|fs
+init|=
+operator|new
+name|FileSet
+argument_list|()
+decl_stmt|;
+name|fs
+operator|.
+name|setDir
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/buildlist"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|fs
+operator|.
+name|setIncludes
+argument_list|(
+literal|"**/build.xml"
+argument_list|)
+expr_stmt|;
+name|buildlist
+operator|.
+name|addFileset
+argument_list|(
+name|fs
+argument_list|)
+expr_stmt|;
+name|buildlist
+operator|.
+name|setReference
+argument_list|(
+literal|"ordered.build.files"
+argument_list|)
+expr_stmt|;
+name|buildlist
+operator|.
+name|execute
+argument_list|()
+expr_stmt|;
+name|Object
+name|o
+init|=
+name|p
+operator|.
+name|getReference
+argument_list|(
+literal|"ordered.build.files"
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|o
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|o
+operator|instanceof
+name|Path
+argument_list|)
+expr_stmt|;
+name|Path
+name|path
+init|=
+operator|(
+name|Path
+operator|)
+name|o
+decl_stmt|;
+name|String
+index|[]
+name|files
+init|=
+name|path
+operator|.
+name|list
+argument_list|()
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|files
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|files
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
 name|testWithTwoLeafs
 parameter_list|()
 block|{
@@ -2182,6 +2459,13 @@ operator|.
 name|setIncludes
 argument_list|(
 literal|"**/build.xml"
+argument_list|)
+expr_stmt|;
+name|fs
+operator|.
+name|setExcludes
+argument_list|(
+literal|"F/build.xml,G/build.xml"
 argument_list|)
 expr_stmt|;
 name|buildlist
